fix: modal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,6 @@
 
 body {
   margin: 0px;
+
+  overflow: hidden;
 }
